lib updates